1.1.6 Tue Apr 16 03:29:57 EDT 2013
* Merge of 1.0.4 tree
* Added support for gearadmin to "cancel" a job.
* Keep-alive support for gearmand has been extended (more options to control behavior).

1.1.5 Mon Feb  4 00:59:19 EST 2013
* Rollup of bug fixes for 1.0.3
* --threads=0 for gearmand will now result in gearmand using all available cores.

1.1.4 Mon Dec 17 21:24:16 EST 2012
* Add GEARMAN_CLIENT_GENERATE_UNIQUE, with default set to not generate.
* Experimental addition to queue service which will allow a queue to be stored on shutdown (--libsqlite3-store-on-shutdown).
* Rollup of all changes in 1.0.2

1.1.3 Wed Nov  7 22:48:21 EST 2012
* Merge with 1.0.1

1.1.2 Fri Oct 12 05:34:29 EDT 2012
* Merge with 0.41

1.1.1 Wed Sep 19 22:04:56 EDT 2012
* Merge with 0.39

1.1.0 Wed Sep  5 08:33:37 PDT 2012
* Fix for ABI compatibility issues.

1.0.6
* strlen() of zero on name passed for instance did not result in a connection to localhost (which the php driver thought would happen).
* Fix regression in log not updating time on all platforms.
* Fix issue where pecl php wasn't passing a null string to get default host.

1.0.5 Mon Apr 15 06:36:05 EDT 2013
* Fix for log_fn

1.0.4 Never Released
* Added --coredump flag to gearmand
* Removed result type enum, since the structure is never exposed to the user this was of limited use.
* Assorted bug fixes.

1.0.3 Sun Feb  3 21:05:52 EST 2013
* Allow for a longer set of retries if port is in use when the server starts up.
* Added checking for valgrind sgcheck
* Fedora 18 fixes.

1.0.2 Mon Dec 17 07:24:42 EST 2012
* Add --expceptions to Gearmand to enable exceptions by default
* Backtraces on some types of crashes.
* Add GEARMAN_CLIENT_GENERATE_UNIQUE.
* If the unique value passed to any client function is "#" then the unique value will be derived by hashing the workload that is being supplied to the function.
* Optimize status requests so that they exit as soon as request is received.
* Fix test case results for FreeBSD.
