@@ -69,7 +69,7 @@ enum gearman_command_t
   GEARMAN_COMMAND_SET_CLIENT_ID,       /* W->J: [RANDOM_STRING_NO_WHITESPACE] */
   GEARMAN_COMMAND_CAN_DO_TIMEOUT,      /* W->J: FUNC[0]TIMEOUT */
   GEARMAN_COMMAND_ALL_YOURS,
-  GEARMAN_COMMAND_WORK_EXCEPTION,
+  GEARMAN_COMMAND_WORK_EXCEPTION,      /* W->J/C: HANDLE[0] */
   GEARMAN_COMMAND_OPTION_REQ,          /* ?->J: TEXT */
   GEARMAN_COMMAND_OPTION_RES,          /* J->?: TEXT */
   GEARMAN_COMMAND_WORK_DATA,
