@@ -45,6 +45,7 @@ struct gearman_string_t {
 
 #define gearman_size(X) (X).size
 #define gearman_c_str(X) (X).c_str
+#define gearman_string_param_printf(X) int((X).size), (X).c_str
 #define gearman_string_param(X) (X).c_str, (X).size
 #define gearman_string_param_null NULL, 0
 #define gearman_string_param_cstr(X) (X), ((X) ? strlen(X) : 0)
