@@ -170,6 +170,12 @@ gearman_return_t gearman_task_return(const gearman_task_st *task);
 GEARMAN_API
 const char *gearman_task_strstate(const gearman_task_st *);
 
+GEARMAN_API
+bool gearman_task_has_exception(const gearman_task_st* task_shell);
+
+GEARMAN_API
+gearman_string_t gearman_task_exception(const gearman_task_st *);
+
 /** @} */
 
 #ifdef __cplusplus
